--- a/index.html
+++ b/index.html
@@ -2,263 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
-    <!-- LINKS -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/src/styles/index.css" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Vite + TS</title>
+    <link rel="stylesheet" href="/src/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <title>PDF Editor</title>
   </head>
   <body>
-    <div class="app-container">
-      <header class="toolbar-header">
-        <div class="header-left">
-          <h1>PDF Editor</h1>
-          <button class="btn btn-primary hidden" title="Select a new PDF file">Load New PDF</button>
-        </div>
+    <div class="upload-page">
+      <div class="upload-container">
+        <h1>PDF Editor</h1>
+        <p>
+          Edit PDF by adding text, shapes, comments and highlights. Your secure and simple tool to
+          edit PDF.
+        </p>
 
-        <div id="editor-toolbar" class="hidden">
-          <div class="tool-group">
-            <button class="tool-btn active" title="Select & Move">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M3 3l7.07 16.97 2.51-7.39 7.39-2.51L3 3z"></path>
-                <path d="M13 13l6 6"></path>
-              </svg>
-            </button>
-            <button class="tool-btn" title="Add Text">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <polyline points="4 7 4 4 20 4 20 7"></polyline>
-                <line x1="9" y1="20" x2="15" y2="20"></line>
-                <line x1="12" y1="4" x2="12" y2="20"></line>
-              </svg>
-            </button>
-            <button class="tool-btn" title="Erase/Whiteout">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path
-                  d="M20.42 4.58a2.1 2.1 0 0 0-2.97 0L7.85 12.15a2.1 2.1 0 0 0 0 2.97l2.97 2.97a2.1 2.1 0 0 0 2.97 0l9.61-9.61a2.1 2.1 0 0 0 0-2.97z"
-                ></path>
-                <path d="M2 22l5.5-5.5"></path>
-              </svg>
-            </button>
-          </div>
-          <div class="tool-group">
-            <button class="tool-btn" title="Undo Last Action" disabled>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M21 7v6h-6"></path>
-                <path d="M3 17a9 9 0 0 1 9-9 9 9 0 0 1 6 2.3l-3 2.7"></path>
-              </svg>
-            </button>
-            <button class="tool-btn" title="Redo Last Action" disabled>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M3 17v-6h6"></path>
-                <path d="M21 7a9 9 0 0 1-9 9 9 9 0 0 1-6-2.3l3-2.7"></path>
-              </svg>
-            </button>
-          </div>
-          <button class="btn btn-secondary" title="Save and download the edited PDF" disabled>
-            Download
+        <div class="upload-zone">
+          <input type="file" id="file-input" accept=".pdf" hidden />
+          <button class="upload-btn" onclick="document.getElementById('file-input').click()">
+            <i class="fas fa-arrow-up-from-bracket"></i>
+            Select PDF file
           </button>
+          <p class="drag-text">or drop PDF here</p>
         </div>
-
-        <div id="text-format-toolbar" class="hidden">
-          <div class="tool-group">
-            <select id="font-family-select" class="format-control" title="Font Family">
-              <option>Arial</option>
-              <option>Verdana</option>
-              <option>Times New Roman</option>
-              <option>Courier New</option>
-              <option>Georgia</option>
-            </select>
-            <input
-              type="number"
-              id="font-size-input"
-              class="format-control"
-              value="12"
-              title="Font Size"
-            />
-          </div>
-          <div class="tool-group">
-            <button class="tool-btn" title="Bold">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M6 4h8a4 4 0 0 1 4 4 4 4 0 0 1-4 4H6z"></path>
-                <path d="M6 12h9a4 4 0 0 1 4 4 4 4 0 0 1-4 4H6z"></path>
-              </svg>
-            </button>
-            <button class="tool-btn" title="Italic">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <line x1="19" y1="4" x2="10" y2="4"></line>
-                <line x1="14" y1="20" x2="5" y2="20"></line>
-                <line x1="15" y1="4" x2="9" y2="20"></line>
-              </svg>
-            </button>
-            <button class="tool-btn" title="Underline">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M6 3v7a6 6 0 0 0 6 6 6 6 0 0 0 6-6V3"></path>
-                <line x1="4" y1="21" x2="20" y2="21"></line>
-              </svg>
-            </button>
-            <input
-              type="color"
-              id="text-color-input"
-              class="format-control"
-              value="#000000"
-              title="Text Color"
-            />
-          </div>
-        </div>
-      </header>
-
-      <div class="main-content-area">
-        <aside id="sidebar" class="hidden"></aside>
-        <main id="main-content">
-          <div id="upload-prompt">
-            <h1>PDF Editor</h1>
-            <p class="subtitle">
-              Edit PDF documents by adding text, erasing content, and more. Secure, simple, and
-              entirely in your browser.
-            </p>
-            <button class="btn btn-primary">Select PDF file</button>
-            <p class="drop-text">or drop PDF here</p>
-          </div>
-          <div id="canvas-container" class="hidden">
-            <canvas id="pdf-canvas"></canvas>
-          </div>
-        </main>
       </div>
-
-      <footer id="bottom-toolbar" class="hidden">
-        <div class="page-nav">
-          <button class="tool-btn" title="Previous Page">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-              <path
-                fill-rule="evenodd"
-                d="M7.72 12.53a.75.75 0 010-1.06l7.5-7.5a.75.75 0 111.06 1.06L9.31 12l6.97 6.97a.75.75 0 11-1.06 1.06l-7.5-7.5z"
-                clip-rule="evenodd"
-              />
-            </svg>
-          </button>
-          <div class="page-indicator">
-            <input type="number" value="1" class="page-input" aria-label="Current page" />
-            <span>/ 1</span>
-          </div>
-          <button class="tool-btn" title="Next Page">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-              <path
-                fill-rule="evenodd"
-                d="M16.28 11.47a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 01-1.06-1.06L14.69 12 7.72 5.03a.75.75 0 011.06-1.06l7.5 7.5z"
-                clip-rule="evenodd"
-              />
-            </svg>
-          </button>
-        </div>
-        <div class="zoom-controls">
-          <button class="tool-btn" title="Zoom Out">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-              <path
-                fill-rule="evenodd"
-                d="M4 12a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H4.75A.75.75 0 014 12z"
-                clip-rule="evenodd"
-              />
-            </svg>
-          </button>
-          <span class="zoom-level">100%</span>
-          <button class="tool-btn" title="Zoom In">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-              <path
-                d="M12 4.75a.75.75 0 01.75.75v6h6a.75.75 0 010 1.5h-6v6a.75.75 0 01-1.5 0v-6h-6a.75.75 0 010-1.5h6v-6A.75.75 0 0112 4.75z"
-              />
-            </svg>
-          </button>
-        </div>
-      </footer>
     </div>
   </body>
 </html>
